[package]
name = "ws-wasm"
version = "0.1.0"
authors = ["mhchia <kevin.mh.chia@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2.87"
ws_stream_wasm = "0.7.4"
futures-util = "0.3.28"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

